text edits/corrections

--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -48,11 +48,11 @@ In reef coral symbioses, intracellular *Symbiodinium* translocate photosynthetic
 
 While the formal DEB model of @Muller:2009io represents the most significant theoretical contribution in coral symbiosis research to date, we aim to strengthen the role of theory and broaden its potential application in three primary ways:
 
-1. _Develop a new module of photo-oxidative stress._ Of primary interest to coral biologists and ecologists is symbiosis dysfunction under environmental stress, resulting in coral “bleaching”--the loss of algal symbionts from the association [@Jokiel:1977p7353]. Bleaching is thought to be triggered by photo-oxidative stress in *Symbiodinium* [@Weis:2008p944], which has been modeled previously as a response to absolute external irradiance [@Eynaud:2011tv]. However, this response may also depend on self-shading by other symbionts [@Enriquez:2005p142], CO~2~ availability at the site of photosynthesis [@Wooldridge:2009p7807], and other non-photochemical quenching mechanisms [@Roth:2014wf]. We incorporate these features into a new photo-oxidative stress module linking overreduction of the photosynthetic light reactions to downstream impacts of photoinhibition and photodamage. Importantly, this formulation introduces a link between CO~2~-limitation of photosynthesis and bleaching, and potential synergistic roles for heterotrophy and nutrient availability in influencing bleaching responses [@Wooldridge:2014hc]
+1. _Develop a new module of photo-oxidative stress._ Of primary interest to coral biologists and ecologists is symbiosis dysfunction under environmental stress, resulting in coral “bleaching”--the loss of algal symbionts from the association [@Jokiel:1977p7353]. Bleaching is thought to be triggered by photo-oxidative stress in *Symbiodinium* [@Weis:2008p944], which has been modeled previously as a response to absolute external irradiance [@Eynaud:2011tv]. However, this response may also depend on self-shading by other symbionts [@Enriquez:2005p142], CO~2~ availability at the site of photosynthesis [@Wooldridge:2009p7807], and other non-photochemical quenching mechanisms [@Roth:2014wf]. We incorporate these features into a new photo-oxidative stress module linking overreduction of the photosynthetic light reactions to downstream impacts of photoinhibition and photodamage. Importantly, this formulation introduces a link between CO~2~-limitation of photosynthesis and bleaching, and potential synergistic roles for heterotrophy and nutrient availability in influencing bleaching responses [@Wooldridge:2014hc].
 
 2. _Reduce theoretical and mathematical complexity._ Following the logic of @Jager:2013bj, we exclude certain features of formal DEB theory in order to capture behaviors of interest with the simplest possible formulation. Here, we present a model without reserves, maturity, or reproduction [see @Kooijman:2010vd]. This formulation precludes modeling the full life cycle of corals as reproduction, larval stages, and metamorphosis are not considered, but greatly reduces theoretical complexity and parameter numbers, which is advantageous given the relative paucity of data for corals. Moreover, dynamics of the symbiosis (i.e., changes in symbiont to host biomass, including bleaching and recovery) and coral biomass growth are efficiently captured with this simpler formulation, which also increases accessibility for biologists and ecologists without requiring expertise in DEB theory.
 
-3. _Provide well-documented, open source code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide access to the model in the form of an R package called coRal [github.com/jrcunning/coRal](github.com/jrcunning/coRal), which users may install to run and visualize model simulations. With an accessible and modular framework, we envision this code base as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose R [@RALanguageandEn:2014wf], an open source programming language in common use by biologists and ecologists, to reach the widest possible audience with this work.
+3. _Provide well-documented, open source code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide access to the model in the form of an R package called coRal ([github.com/jrcunning/coRal](github.com/jrcunning/coRal)), which users may install to run and visualize model simulations. With an accessible and modular framework, we envision this code base as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose R [@RALanguageandEn:2014wf], an open source programming language in common use by biologists and ecologists, to reach the widest possible audience with this work.
 
 With these as our primary motivations, we describe a simplified approach to bioenergetic modeling of coral-*Symbiodinium* symbioses that dynamically integrates the influences of external irradiance, nutrients, and prey availability on coral growth and symbiosis dynamics (i.e., changes in symbiont:host biomass ratios), allowing for the possibility of coral bleaching in response to photooxidative stress. An emergent finding of this work is that coral bleaching can be interpreted as an alternate stable state of the symbiotic system, which provides a new framework for understanding the mechanisms that drive a coral into a bleached state, as well as those that facilitate recovery. In the following sections, we describe and provide rationale for the model structure, demonstrate a range of steady state and dynamic behaviors that are consistent with observed phenomena, and discuss new insights from this work in understanding responses of coral-*Symbiodinium* symbioses to environmental change.
 
@@ -135,11 +135,11 @@ Additionally, the coral animal acquires dissolved inorganic nitrogen (DIN) from 
 
 \begin{equation} j_N = {{j_{Nm} \cdot N} \over {N + K_N}} \end{equation}
 
-Coral biomass formation is then specified by a parallel complementary SU (formula in Fig. 3.7 of @Kooijman:2010vd]). The general form of this equation is $(m^{-1} + x^{-1} + y^{-1} - (x + y)^{-1})^{-1}$, where $m$ is the maximum production flux, and $x$ and $y$ are the input fluxes of the two substrates. Coral biomass is thus produced from carbon and nitrogen according to:
+Coral biomass formation is then specified by a parallel complementary SU [formula in Fig. 3.7 of @Kooijman:2010vd]. The general form for a production flux is $(m^{-1} + x^{-1} + y^{-1} - (x + y)^{-1})^{-1}$, where $m$ is the maximum production flux, and $x$ and $y$ are the input fluxes of the two substrates. Coral biomass is thus produced from carbon and nitrogen according to:
 
 \begin{equation} j_{HG} = \bigg({1 \over j_{HGm}} + {1 \over {y_{C}\rho_C{S \over H} + j_X}} + {1 \over {(j_N + n_{NX}j_X + r_{NH})n_{NH}^{-1}}} - {1 \over {y_{C}{\rho_C{S \over H} + j_X} + (j_N + n_{NX}j_X + r_{NH})n_{NH}^{-1}}}\bigg)^{-1} \end{equation}
 
-where $\rho_C$ is fixed carbon shared by the symbiont (see Eq. 21), and $r_{NH}$ is recycled nitrogen liberated by host biomass turnover (see Eq. 7). The parameter $y_C$ specifies the yield of biomass from organic carbon, which we take to be 0.8 to satisfy redox balance (see @Muller:2009io). 
+where $\rho_C$ is fixed carbon shared by the symbiont (see Eq. 21), and $r_{NH}$ is recycled nitrogen liberated by host biomass turnover (see Eq. 7). The parameter $y_C$ specifies the yield of biomass from organic carbon, which we take to be 0.8 to satisfy redox balance [see @Muller:2009io]. 
 
 Host biomass turnover is equal to the specific maintenance rate of host biomass,
 
@@ -185,7 +185,7 @@ Fixed carbon is then produced by the photosynthesis SU according to:
 
 \begin{equation} j_{CP} = \bigg({1 \over j_{CPm}} + {1 \over {y_{CL} j_L }} + {1 \over {(j_{CO_2} + r_{CH}){H \over S} + r_{CS}}} - {1 \over {y_{CL} j_L + (j_{CO_2} + r_{CH}){H \over S} + r_{CS}}}\bigg)^{-1} \cdot c_{ROS}^{-1} \end{equation}
 
-where $j_{CPm}$ is the maximum specific rate of photosynthesis, and $c_{ROS}$ is the relative rate of reactive oxygen species production (see Eq. 18). Dividing the photosynthetic rate by $c_{ROS}$ causes a decline in response to photooxidative stress at high light levels, and the emergent outcome of this SU formulation demonstrates a classic photoinhibition response (Fig. S2).
+where $j_{CPm}$ is the maximum specific rate of photosynthesis, and $c_{ROS}$ is the relative rate ($\ge1$) of reactive oxygen species production (see Eq. 18). Dividing the photosynthetic rate by $c_{ROS}$ causes a decline in response to photooxidative stress at high light levels, and the emergent outcome of this SU formulation demonstrates a classic photoinhibition response (Fig. S2).
 
 Light energy absorbed in excess of what is used to fix carbon is specified by the SU rejection flux, according to:
 
@@ -232,9 +232,9 @@ where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates 
 
 ## Numerical analysis
 
-The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-22) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, CO~2~ rejected from the host SU at time $t$ arrives at the photosynthesis SU at time $t + \Delta t$. 
+The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-22) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, carbon rejected from the symbiont SU at time $t$ arrives at the host SU at time $t + \Delta t$. 
 
-Simulations using the discretized scheme were performed using R code developed in the coRal R package [github.com/jrcunning/coRal](github.com/jrcunning/coRal). By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. 2-8 in this paper). For steady state estimations, simulations were run until the changes in specific growth rate of the host and the S:H biomass ratio were less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code. All of the R code for the simulations and figures presented in this paper can be found in the accompanying data repository at [github.com/jrcunning/coRal-analysis](github.com/jrcunning/coRal-analysis).
+Simulations using the discretized scheme were performed using R code developed in the coRal R package ([github.com/jrcunning/coRal](github.com/jrcunning/coRal)). By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. 2-8 in this paper). For steady state estimations, simulations were run until the changes in specific growth rate of the host and the S:H biomass ratio were less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code. All of the R code for the simulations and figures presented in this paper can be found in the accompanying data repository at [github.com/jrcunning/coRal-analysis](github.com/jrcunning/coRal-analysis).
 
 # Steady state behavior
 
@@ -251,7 +251,7 @@ Similarly, increasing DIN alleviates nitrogen-limitation (Fig. 3A). Increased gr
 The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-25 mol photons m^-2^ d^-1^ light and ~4 µM DIN (Fig. 3A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv in *Acropora pulchra* under similar N-enriched conditions. Under conditions more typical of reef environments (<0.5 µM DIN), predicted growth rates are ~0.01-0.03 d^-1^. Observed specific growth rates in several coral species fall near or below the lower end of this range (~0.01 d^-1^) [@Osinga:2011kq; @Osinga:2012is], though values as high as 0.025 d^-1^ have been reported in *Galaxea fascicularis* [@Schutter:2010p7758], and `r Armoza_gr` d^-1^ in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju]. However, it is not surprising that observed growth rates are often lower than model predictions, since the model does not account for ecological factors that may limit growth (e.g., competition, predation, bioerosion). 
 Furthermore, while most measurements are made on skeletal growth, the model predicts biomass growth, which may not always be strongly correlated [@Anthony:2002tc].
 
-At irradiance levels above ~25 mol photons m^-2^ d^-1^, steady state growth rates decline until positive growth ceases above ~40 µmol photons m^-2^ d^-1^ (Fig. 3A). The mechanism underlying this decline is the increase in light energy beyond the capacities of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 3B), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 3B) and eventual cessation of growth (Fig. 3A). 
+At irradiance levels above ~25 mol photons m^-2^ d^-1^, steady state growth rates decline until positive growth ceases above ~40 µmol photons m^-2^ d^-1^ (Fig. 3A). The mechanism underlying this decline is the increase in light energy beyond the capacities of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 3B), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation and eventual cessation of growth (Fig. 3A). 
 
 The incorporation of photooxidative stress in the model sets an upper limit to the amount of light at which a stable symbiotic interaction can be maintained, but even below this threshold of breakdown, negative effects of high light reduce steady state growth and symbiont:host biomass (Fig. 3). This gradual decline is consistent with experimental results showing that high light levels decrease growth [@Schutter:2011ie], and field studies documenting optimum growth rates at intermediate depths [@Baker:1975ip; @Huston:1985ec]. By incorporating these impacts of light stress, the model predicts greater, and more realistic, variation in state variables across light gradients than was predicted by the models of @Muller:2009io, which did not include photoinhibition or photodamage, or @Eynaud:2011tv, which included representations of photoinhibition or photodamage separately. It is important to recognize that the upper light limit set by photooxidative stress on a stable symbiosis under steady state conditions (Fig. 3) may be temporarily crossed by a dynamic system, which may experience a period of symbiont loss (bleaching) and reduced growth, after which a return to benign conditions may restore symbiont biomass and positive growth. To explore this further and illustrate the behavior of the model in more detail, we evaluate a number of dynamic simulations below (see "Dynamic behavior").
 
@@ -294,7 +294,7 @@ The importance of host CCM activity establishes significant interactive roles fo
 
 Since bleaching can be understood as a transition from a nitrogen-limited state with high S:H biomass to a carbon-limited state with low S:H biomass, induced by an external stressor, recovery can be understood as a switch back to the nitrogen-limited state once the external stressor is alleviated. In natural settings, this typically occurs through seasonal declines in temperature and light. However, hysteresis associated with the system's alternate stable states indicates that the symbiosis cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2). This is because under the same external conditions, a bleached coral with low S:H biomass (relative to a healthy coral with high S:H biomass) is characterized by greater light amplification and weaker CCM activity, which enhance photooxidative stress and serve to maintain the carbon-limited state. In order for the system to recover, the stressor must be reduced enough such that photooxidative stress ceases and translocation of carbon from symbiont to host is resumed. Once this occurs, the host can energize its CCMs, which further enhances carbon fixation and accelerates the system back toward a nitrogen-limited state, indicative of recovery. The conditions under which recovery can occur -- which determine the magnitude of hysteresis (Fig. 8) -- depend on the relative abundance of nitrogen and carbon in the environment. Higher food levels, representing a non-autotrophic carbon source for the host, make it easier for the host to overcome carbon-limitation (Fig. 8A, D), thus providing a potential mechanism underlying observations that feeding aids recovery from bleaching [@Grottoli:2006p3692; @Connolly:2012ep]. Conversely, high external DIN impedes the re-establishment of nitrogen-limitation, making recovery from bleaching more difficult (i.e., narrowing - or eliminating - conditions under which recovery is possible, Fig. 8C).
 
-![Hysteresis under different nutrient and feeding regimes. Steady state S:H biomass ratios in constant environments with (A) low DIN (1e-7 M) and low food (2e-7 M), (B) low DIN (1e-7 M) and no food, (C) high DIN (2e-6 M) and low food (2e-7 M), and (D) high DIN (2e-6 M) and high food (4e-7 M). In each panel, steady states are shown starting from both high initial S:H biomass (1, i.e. healthy corals - closed circles) and low initial initial S:H biomass (0.0001, i.e. bleached corals - open circles). Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state. Arrows above points indicate values beyond the y-axis range.](../img/Fig8.png)
+![Hysteresis under different nutrient and feeding regimes. Steady state S:H biomass ratios in constant environments with (A) low DIN (1e-7 mol N L^-1^) and low food (2e-7 C-molX L^-1^), (B) low DIN (1e-7 mol N L^-1^) and no food, (C) high DIN (2e-6 mol N L^-1^) and low food (2e-7 C-molX L^-1^), and (D) high DIN (2e-6 mol N L^-1^) and high food (4e-7 C-molX L^-1^). In each panel, steady states are shown starting from both high initial S:H biomass (1, i.e. healthy corals - closed circles) and low initial initial S:H biomass (0.0001, i.e. bleached corals - open circles). Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state. Arrows above points indicate values beyond the y-axis range.](../img/Fig8.png)
 
 Dynamic simulations of recovery reveal another interesting behavior of the system: under some conditions, an 'overshoot' occurs in which S:H biomass temporarily increases beyond the ratio maintained in the 'healthy' state, before returning to stabilize at this value (Fig. 9). In fact, unusually high symbiont densities have been observed following bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model reveals the dynamics of this 'overshoot' as follows: as symbionts repopulate the host, photosynthesis becomes increasingly CO~2~-limited due to weak CCM activity of the carbon-limited host. Thus, although symbiont growth is not yet carbon-limited, a growing symbiont population has less and less excess carbon (per symbiont) to share, and is thus moving toward carbon-limitation. Meanwhile, because S:H biomass is increasing, the host receives more and more carbon per unit host biomass, and is thus moving away from carbon-limitation. If the host overcomes carbon-limitation *before* the symbiont reaches it, then the system rapidly transitions to the nitrogen-limited state and the S:H ratio stabilizes without an overshoot (Fig. 9A). However, if the symbiont becomes carbon-limited first (Fig. 9B, 9C), then carbon translocation per symbiont declines further and photosynthesis becomes more CO~2~-limited, which maintains carbon-limitation of the host. In this situation, continued growth of less and less productive symbionts drives S:H biomass to a much higher level before the host finally overcomes carbon-limitation. At this point, representing the peak of the overshoot, the transition to nitrogen-limitation finally takes place and the S:H biomass ratio declines and stabilizes as positive growth is resumed.
 
@@ -302,7 +302,7 @@ Whether this 'overshoot' occurs or not is determined by the relative availabilit
 
 ![Recovery from bleaching with varying N:C availability (A: N:C=0.100; B: N:C=0.175; C: N:C=0.220). Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation. Substrate limitation coefficients were calculated using Eq. 23. All simulations were run with default parameters (except varying $n_{NX}$), with L=20 mol photons m^2^ d^-1^, DIN=1e-7 mol N L^-1^, prey=1e-7 CmolX L^-1^, and initial S:H biomass=0.001.](../img/Fig9.png)
 
-These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the carbon-limited state may still persist (e.g. Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et, @Hughes:2013hd]). These findings suggest that host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. Additional carbon sources for the host, such as direct uptake of dissolved organic carbon [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
+These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the carbon-limited state may still persist (e.g. Fig. 9B,C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et; @Hughes:2013hd]. These findings suggest that host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. Additional carbon sources for the host, such as direct uptake of dissolved organic carbon [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
 
 # Conclusions
 
